# SALTSA_public

./: README.md
SALTSA_example/: EXECUTEME.sh  Makefile  Makefile.am  Makefile.in  SALTSA.h  SALTSA_astro.cpp  SALTSA_astro.h  SALTSA_cache.hpp  SALTSA_calculus.hpp  SALTSA_example.cpp  SALTSA_file_functions.cpp  SALTSA_file_functions.h  SALTSA_functor.hpp  SALTSA_global.h  SALTSA_interpolator.cpp  SALTSA_interpolator.h  SALTSA_misc_functions.cpp  SALTSA_misc_functions.h  SALTSA_misc_functions.hpp  SALTSA_orbit.cpp  SALTSA_orbit.h  SALTSA_phase.hpp  SALTSA_solvers.hpp  SALTSA_stripping_orbit.cpp  SALTSA_tSIS_profile.hpp  SALTSA_unitconvs.h  SALTSA_vector.hpp  compile_SALTSA_example.sh  config.h  configure  configure.ac  interloper_class.cpp  interloper_class.h  make_SALTSA_example_plot.pl  make_pdfs.cpp  make_pdfs.h  orbit_class.cpp  orbit_class.h  read_orbits.cpp  read_orbits.h  (+2 more)
SALTSA_example/brg/: file_functions.cpp  file_functions.h  global.h  utility.hpp
SALTSA_example/brg/file_access/: open_file.hpp
SALTSA_example/brg/math/: misc_math.hpp  safe_math.hpp
SALTSA_example/brg/math/cache/: cache.hpp
SALTSA_example/brg/math/calculus/: DE.hpp  differentiate.hpp  integrate.hpp
SALTSA_example/brg/math/functor/: functor_product.hpp
SALTSA_example/brg/math/interpolator/: interpolator.cpp  interpolator.h  interpolator_derivative.cpp  interpolator_derivative.h  interpolator_derivative_functors.cpp  interpolator_derivative_functors.h  tk_spline.cpp  tk_spline.h
SALTSA_example/brg/math/random/: distributions.hpp  random_functions.cpp  random_functions.hpp
SALTSA_example/brg/math/solvers/: solvers.hpp
SALTSA_example/brg/physics/: astro.cpp  astro_caches.cpp  phase.hpp
SALTSA_example/brg/physics/SALTSA/: gabdt.cpp  gabdt.h  solve_rt_functors.cpp  solve_rt_functors.h  stripping_orbit.cpp  stripping_orbit_segment.cpp  stripping_orbit_segment.h
SALTSA_example/brg/physics/astro/: astro.cpp  astro.h  astro_caches.cpp  astro_caches.h
SALTSA_example/brg/physics/astro/SALTSA/: gabdt.cpp  gabdt.h  solve_rt_functors.cpp  solve_rt_functors.h  stripping_orbit.cpp  stripping_orbit.h  stripping_orbit_segment.cpp  stripping_orbit_segment.h
SALTSA_example/brg/physics/astro/density_profile/: density_profile.cpp  density_profile.h  density_profile_functors.cpp  density_profile_functors.h  point_mass_profile.cpp  point_mass_profile.h  tNFW_profile.cpp  tNFW_profile.h  tNFW_profile_functors.hpp
SALTSA_example/brg/physics/density_profile/: density_profile.cpp  density_profile.h  density_profile_functors.h  point_mass_profile.h  tNFW_profile.cpp  tNFW_profile.h  tNFW_profile_functors.hpp
SALTSA_example/brg/physics/units/: unit_conversions.hpp  unit_obj.cpp  unit_obj.h
SALTSA_example/brg/vector/: elementwise_functions.hpp  manipulations.hpp  summary_functions.hpp
brg/: SALTSA_interpolator.cpp  SALTSA_interpolator.h  Spline.hpp  brg_astro.cpp  brg_astro.h  brg_cache.hpp  brg_cache_nd.hpp  brg_calculus.hpp  brg_file_functions.cpp  brg_file_functions.h  brg_functions.cpp  brg_functions.h  brg_functions.hpp  brg_functor.hpp  brg_global.h  brg_interpolator.cpp  brg_interpolator.h  brg_misc_functions.hpp  brg_multi_vector.hpp  brg_orbit.cpp  brg_orbit.h  brg_phase.hpp  brg_random_functions.cpp  brg_random_functions.h  brg_solvers.hpp  brg_units.cpp  brg_units.h  brg_vector.hpp  brg_vector_functions.hpp  tk_spline.cpp
(+3 files in other folders)
