bin_PROGRAMS = SALTSA_example
SALTSA_example_SOURCES = brg/file_functions.cpp brg/math/interpolator/interpolator.cpp brg/math/interpolator/interpolator_derivative.cpp brg/math/interpolator/interpolator_derivative_functors.cpp brg/math/interpolator/tk_spline.cpp brg/physics/astro/astro_caches.cpp brg/physics/astro/astro.cpp brg/physics/astro/density_profile/density_profile.cpp brg/physics/astro/density_profile/density_profile_functors.cpp brg/physics/astro/density_profile/point_mass_profile.cpp brg/physics/astro/density_profile/tNFW_profile.cpp brg/physics/astro/SALTSA/gabdt.cpp brg/physics/astro/SALTSA/solve_rt_functors.cpp brg/physics/astro/SALTSA/stripping_orbit.cpp brg/physics/astro/SALTSA/stripping_orbit_segment.cpp brg/physics/units/unit_obj.cpp SALTSA_example.cpp
AM_CPPFLAGS = -fopenmp -DNDEBUG
AM_LDFLAGS = -fopenmp
