bin_PROGRAMS = SALTSA_example SALTSA_make_pdfs
SALTSA_example_SOURCES = brg/file_functions.cpp brg/math/interpolator/interpolator.cpp brg/math/interpolator/interpolator_derivative.cpp brg/math/interpolator/interpolator_derivative_functors.cpp brg/math/interpolator/tk_spline.cpp brg/physics/astro_caches.cpp brg/physics/astro.cpp brg/physics/density_profile/density_profile.cpp brg/physics/density_profile/density_profile_functors.cpp brg/physics/density_profile/point_mass_profile.cpp brg/physics/density_profile/tNFW_profile.cpp brg/physics/SALTSA/gabdt.cpp brg/physics/SALTSA/solve_rt_functors.cpp brg/physics/SALTSA/stripping_orbit.cpp brg/physics/SALTSA/stripping_orbit_segment.cpp brg/physics/units/unit_obj.cpp SALTSA_example.cpp
SALTSA_make_pdfs_SOURCES = brg/file_functions.cpp brg/math/interpolator/interpolator.cpp brg/math/interpolator/interpolator_derivative.cpp brg/math/interpolator/interpolator_derivative_functors.cpp brg/math/interpolator/tk_spline.cpp brg/math/random/random_functions.cpp brg/physics/astro_caches.cpp brg/physics/astro.cpp brg/physics/density_profile/density_profile.cpp brg/physics/density_profile/density_profile_functors.cpp brg/physics/density_profile/point_mass_profile.cpp brg/physics/density_profile/tNFW_profile.cpp brg/physics/SALTSA/gabdt.cpp brg/physics/SALTSA/solve_rt_functors.cpp brg/physics/SALTSA/stripping_orbit.cpp brg/physics/SALTSA/stripping_orbit_segment.cpp brg/physics/units/unit_obj.cpp interloper_class.cpp orbit_class.cpp read_orbits.cpp make_pdfs.cpp
AM_CPPFLAGS = -fopenmp -DNDEBUG --std=c++11
AM_LDFLAGS = -fopenmp
